# MyFletifyHTML

./: LICENSE  README.md  example.html  example.py  pyproject.toml
myfletify/: __init__.py  converter.py  parser.py  utils.py
