[tool.poetry]
name = "myfletify"
version = "0.1.0"
description = ""
authors = ["tct123 <42028373+tct123@users.noreply.github.com>", "Benit Mulindwa <mulindwabenit@gmail.com>"]
readme = "README.md"
license = "MIT License"
repository = "https://github.com/tct123/MyFletifyHTML"

[tool.poetry.dependencies]
python = "^3.8"
flet = "^0.25.1"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
